tests/NormalTests/paczka1/small_fuzzy/98439378.err
Error in line 3: wvm A753 69,5
Error in line 5: wvm S684 47,5
Error in line 13: M0;F8XTXQvH A806 ;,9
